fix alignment

--- a/examples/src/content/jcr_root/apps/core-components-examples/clientlibs/clientlib-base-amp/styles/base/text.less
+++ b/examples/src/content/jcr_root/apps/core-components-examples/clientlibs/clientlib-base-amp/styles/base/text.less
@@ -51,6 +51,7 @@
             font-size: @cmp-examples-font-size;
             font-weight: @cmp-examples-font-weight-regular;
             color: @cmp-examples-color-gray-700;
+            vertical-align: baseline;
         }
 
         /*
